# test-data-generation-language

./: .gitignore  HOW_TO_RUN_EXAMPLES.md  IMPLEMENTATION-DESIGN.md  README.md  STORIES.md  custom_test.tdg  debug_custom_types.py  pyproject.toml  test_report.md  validate_wrapper.py
.openhands/: setup.sh
.openhands/microagents/: repo.md
dev-setup/: Dockerfile  README.md  check-environment.py  docker-compose.yml  setup-linux.sh  setup-macos.sh  setup-uv.ps1  setup-uv.sh  setup-windows.ps1  setup.ps1  setup.sh
examples/: test.tdg
examples/advanced/: custom_types.tdg
examples/basic/: custom_types_simple.tdg  simple_table.tdg
examples/postgresql/: README.md  postgres_example.tdg  test_postgres_export.sh
src/testdatagen/: __main__.py
src/testdatagen/cli/: main.py
src/testdatagen/core/ast/: nodes.py
src/testdatagen/core/constraints/: base.py  business.py  relationship.py  value.py
src/testdatagen/core/parser/: __init__.py  builder.py  custom_error_listener.py  error_listener.py
src/testdatagen/core/parser/grammar/: TestDataGen.g4  TestDataGenLexer.g4
src/testdatagen/core/semantic/: analyzer.py  symbol_table.py  type_checker.py  validator.py
src/testdatagen/core/types/: composite.py  custom.py  primitive.py  registry.py
src/testdatagen/export/: base.py
src/testdatagen/export/database/: __init__.py  postgresql.py
src/testdatagen/export/formats/: csv_format.py  json_format.py
src/testdatagen/generator/: engine.py
src/testdatagen/generator/strategies/: base.py  faker_strategy.py  random_strategy.py
tests/: test_custom_types.py  test_generator.py  test_parser.py
